<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SIS Exam Browser</string>
    <string name="label_session_token">Session token</string>
    <string name="action_start_exam">Mulai ujian</string>
    <string name="action_scan_qr">Scan QR token</string>
    <string name="action_open_settings">Pengaturan</string>
    <string name="label_base_url">Base URL ujian</string>
    <string name="action_save">Simpan</string>
    <string name="label_main_info">Atur dulu URL ujian di Pengaturan. Setelah itu, halaman ujian akan terbuka otomatis.</string>
</resources>
